syntax = "proto3";

package go.grpc.srv.reptiles;

service reptiles {
    rpc SaveItem(SaveItemRequest) returns (SaveItemResult) {}
    rpc Process(ProcessRequest) returns (ProcessResult) {}
}

message SaveItemRequest{
    Item item = 1;
}
message SaveItemResult{}


message ProcessRequest{
    string url = 1;
    SerializedParser serializedParser = 2;
}

message SerializedParser {
    string name = 1;
    string args = 2;
}

message ProcessResult{
	repeated Item item = 1;
	repeated ProcessRequest request = 2;
}

message Item {
    string url = 1;
    string type = 2;
    string id = 3;
    Profile Payload = 4;
    Car car = 5;
}

message Profile {
    string name = 1;
    string gender = 2;
    int32 age = 3;
    int32 height = 4;
    int32 weight = 5;
    string income = 6;
    string marriage = 7;
    string education = 8;
    string occupation = 9;
    string hokou = 10;
    string xinzuo = 11;
    string house = 12;
    string car = 13;
}

message Car{
    string  name = 1;
    float   price = 2;
    string  imageURL = 3;
    string  size = 4;
    float   fuel = 5;
    string  transmission = 6;
    string  engine = 7;
    float   displacement = 8;
    float   maxSpeed = 9;
    float   acceleration = 10;
}
